--- a/index.html
+++ b/index.html
@@ -71,6 +71,32 @@
         <p>Наша команда обеспечит Вас необходимым пиломатериалом хвойных и лиственных пород, как стандартных (по ГОСТ 24454-80), так и нестандартных (по Вашему заказу) размеров. Мы работаем напрямую без посредников, что дает нам возможность предложить выгодные цены по СНГ. Мы ответственно подходим к контролю качества всей производимой и поставляемой продукции, которая соответствует ГОСТ 8486-86 «Пиломатериалы хвойных пород Технические условия».</p>
       </div>
     </section>
+    <div class="products">
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+      </div>
+    </div>
     <section class="section" id="contacts">
       <div class="section-contacts">
         <h2>Контакты</h2>
