--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <div class="wrapper">
+  <!--Шапка-->
   <div class="header">
     <div class="header-left">
       <div class="logo">
@@ -40,7 +41,7 @@
       </div>
     </div>
   </div>
-
+  <!--Навигация-->
   <div class="header-nav">
   <ul id="nav" class="menu">
     <li id="menu1" class="menu"><a href="#about">О компании</a></li>
@@ -64,6 +65,7 @@
       <p>Наша команда обеспечит Вас необходимым пиломатериалом хвойных и лиственных пород, как стандартных (по ГОСТ 24454-80), так и нестандартных (по Вашему заказу) размеров. Мы работаем напрямую без посредников, что дает нам возможность предложить выгодные цены по СНГ. Мы ответственно подходим к контролю качества всей производимой и поставляемой продукции, которая соответствует ГОСТ 8486-86 «Пиломатериалы хвойных пород Технические условия».</p>
     </div>
     </section>
+    <!--Описание продукции-->
     <section class="section" id="products">
       <div class="section-products">
         <h2>Наша продукция</h2>
@@ -71,32 +73,298 @@
         <p>Наша команда обеспечит Вас необходимым пиломатериалом хвойных и лиственных пород, как стандартных (по ГОСТ 24454-80), так и нестандартных (по Вашему заказу) размеров. Мы работаем напрямую без посредников, что дает нам возможность предложить выгодные цены по СНГ. Мы ответственно подходим к контролю качества всей производимой и поставляемой продукции, которая соответствует ГОСТ 8486-86 «Пиломатериалы хвойных пород Технические условия».</p>
       </div>
     </section>
+    <!--Витрина-->
     <div class="products">
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
       <div class="prod-container">
         <h5 class="type_title">Новый поддон 800х1200 мм</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
+          <div class="th-content">
+            <div class="th-name">Вес</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">25 кг</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Длина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1200 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
       </div>
     </div>
+    <!--Контакты-->
     <section class="section" id="contacts">
       <div class="section-contacts">
         <h2>Контакты</h2>
@@ -108,6 +376,7 @@
       </div>
     </section>
   </div>
+  <!--FOOTER-->
   <footer class="site-footer">
     <div class="footer-left">
       <div class="footer-adress">
