--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="header">
     <div class="header-left">
       <div class="logo">
-        <img src="https://i.pinimg.com/236x/84/f1/cd/84f1cd19f3e4f417115357fda245143c.jpg">
+        <img src="/images/logo.png" title="логотип">
       </div>
     </div>
     <div class="header-center">
