--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="header">
     <div class="header-left">
       <div class="logo">
-        <img src="/images/logo.jpg" title="логотип">
+        <img src="/images/teh.png" title="логотип">
       </div>
     </div>
     <div class="header-center">
@@ -34,11 +34,17 @@
       </div>
     </div>
     <div class="header-right">
-      <div class="header-contacts">
-        <p><b>Контакты:</b></p>
-        <p><i class="bi bi-envelope"></i> adress@mail</p>
-        <p>8(900)000-00-00 <i class="bi bi-whatsapp" style="color: rgb(19, 211, 19);"></i><br>8(911)000-00-01 <i class="bi bi-whatsapp" style="color: rgb(19, 211, 19);"></i><p>
+      <div class="messengers">
+        <div><img src="https://niris.ru/images/buttons/WhatsApp.svg" height="35px" alt="Whatsapp" title="Whatsapp"></div>
+        <div><img src="https://niris.ru/images/buttons/Viber.svg" height="35px" alt="Viber" title="Viber"></div>
+        <div><img src="https://niris.ru/images/buttons/Telegram.svg" height="35px" alt="Telegram" title="Telegram"></div>
       </div>
+      <div class="header-contacts">
+        <div><p><b>Контакты:</b></p></div>
+        <div><p><i class="bi bi-envelope"></i> adress@mail</p></div>
+        <p>8(900)000-00-00 <br>8(911)000-00-01<p>
+      </div>
+      
     </div>
   </div>
   <!--Навигация-->
@@ -51,6 +57,7 @@
   </ul>
   </div>
   <div>
+    <!--О компании-->
     <section class="section" id="about">
     <div class="section-about">
       <h2>О Компании</h2>
@@ -62,21 +69,19 @@
       <i class="bi bi-at"></i>
       <i class="fa fa-camera-retro"></i>
       <p>Наша компания реализует и поставляет пиломатериал собственного производства отличного качества и геометрии из хвойных и лиственных пород дерева. Мы предлагаем Вам большой выбор пиломатериалов естественной влажности (доска обрезная, необрезная, брус и брусок&#8230;) со склада и под заказ.</p>
-      <p>Наша команда обеспечит Вас необходимым пиломатериалом хвойных и лиственных пород, как стандартных (по ГОСТ 24454-80), так и нестандартных (по Вашему заказу) размеров. Мы работаем напрямую без посредников, что дает нам возможность предложить выгодные цены по СНГ. Мы ответственно подходим к контролю качества всей производимой и поставляемой продукции, которая соответствует ГОСТ 8486-86 «Пиломатериалы хвойных пород Технические условия».</p>
     </div>
     </section>
     <!--Описание продукции-->
     <section class="section" id="products">
       <div class="section-products">
         <h2>Наша продукция</h2>
-        <p>Наша компания реализует и поставляет пиломатериал собственного производства отличного качества и геометрии из хвойных и лиственных пород дерева. Мы предлагаем Вам большой выбор пиломатериалов естественной влажности (доска обрезная, необрезная, брус и брусок&#8230;) со склада и под заказ.</p>
         <p>Наша команда обеспечит Вас необходимым пиломатериалом хвойных и лиственных пород, как стандартных (по ГОСТ 24454-80), так и нестандартных (по Вашему заказу) размеров. Мы работаем напрямую без посредников, что дает нам возможность предложить выгодные цены по СНГ. Мы ответственно подходим к контролю качества всей производимой и поставляемой продукции, которая соответствует ГОСТ 8486-86 «Пиломатериалы хвойных пород Технические условия».</p>
       </div>
     </section>
     <!--Витрина-->
     <div class="products">
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -108,7 +113,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -140,7 +145,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -172,7 +177,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -204,7 +209,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -236,7 +241,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -268,7 +273,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -300,7 +305,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -332,7 +337,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
