--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="header">
     <div class="header-left">
       <div class="logo">
-        <img src="/images/teh.png" title="логотип">
+        <img src="/images/teh.png" title="логотип" height="160" width="230">
       </div>
     </div>
     <div class="header-center">
