--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     </div>
     <div class="header-center">
       <div class="header-worktime">
-        <p><b><i class="bi bi-clock"></i> Режим работы:</b><br>Пн-Пт: 8:00-18:00<br>Сб-Вс: Выходной</p>
-        <p>Принимаем звонки 24/7</p>
+        <div class="test"><p><b><i class="bi bi-clock"></i> Режим работы:</b></p></div>
+        <div class="headertext">
+          <p>Пн-Пт: 8:00-18:00<br>Сб-Вс: Выходной</p>
+          <p>Принимаем звонки 24/7</p>
+        </div>
       </div>
     </div>
     <div class="header-right">
@@ -40,9 +43,8 @@
         <div><img src="https://niris.ru/images/buttons/Telegram.svg" height="35px" alt="Telegram" title="Telegram"></div>
       </div>
       <div class="header-contacts">
-        <div><p><b>Контакты:</b></p></div>
-        <div><p><i class="bi bi-envelope"></i> adress@mail</p></div>
-        <p>8(900)000-00-00 <br>8(911)000-00-01<p>
+        <div class="mail"><p><i class="bi bi-envelope"></i> adress@mail</p></div>
+        <div class="phone"><p>8(900)000-00-00 <br>8(911)000-00-01</p></div>
       </div>
       
     </div>
@@ -373,6 +375,9 @@
     <section class="section" id="contacts">
       <div class="section-contacts">
         <h2>Контакты</h2>
+        <div>
+        <p>Адрес:</p>
+        </div>
     </section>
     <section class="section" id="maps">
       <div class="section-maps">
