--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Bootstrap Font Icon CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!--Google icons-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </style>
 </head>
 <body>
@@ -29,10 +31,10 @@
     </div>
     <div class="header-center">
       <div class="header-worktime">
-        <div class="test"><p><b><i class="bi bi-clock"></i> Режим работы:</b></p></div>
+        <div class="worktime"><p><b><i class="bi bi-clock"></i> Режим работы:</b></p></div>
         <div class="headertext">
-          <p>Пн-Пт: 8:00-18:00<br>Сб-Вс: Выходной</p>
-          <p>Принимаем звонки 24/7</p>
+          <p class="time">Пн-Пт: 8:00-18:00<br>Сб: 8:00-12:00<br>Вс: Выходной</p>
+          <span><p>Принимаем звонки 24/7</p></span>
         </div>
       </div>
     </div>
@@ -54,7 +56,7 @@
   <ul id="nav" class="menu">
     <li id="menu1" class="menu"><a href="#about">О компании</a></li>
     <li id="menu2" class="menu"><a href="#products">Товары и услуги</a></li>
-    <li id="menu3" class="menu"><a href="#pochemu-myi">Почему мы?</a></li>
+    <li id="menu3" class="menu"><a href="#advantages">Почему мы?</a></li>
     <li id="menu4" class="menu"><a href="#contacts">Контакты</a></li>
   </ul>
   </div>
@@ -63,14 +65,13 @@
     <section class="section" id="about">
     <div class="section-about">
       <h2>О Компании</h2>
-      <i class="bi bi-telegram"></i>
       <i class="bi bi-telephone"></i>
       <i class="bi bi-telephone-fill"></i>
       <i class="bi bi-check-circle"></i>
       <i class="bi bi-check2-circle"></i>
       <i class="bi bi-at"></i>
-      <i class="fa fa-camera-retro"></i>
-      <p>Наша компания реализует и поставляет пиломатериал собственного производства отличного качества и геометрии из хвойных и лиственных пород дерева. Мы предлагаем Вам большой выбор пиломатериалов естественной влажности (доска обрезная, необрезная, брус и брусок&#8230;) со склада и под заказ.</p>
+      <p><b>Поддон (pallet)<i class="material-icons">pallet</i></b> - самая распространенная тара для хранениия и траспортировки любого вида материалов и продукции. Так же, благодаря конструкции поддонов, упрощается погрузка и разгрузка всевозможных грузов. Наша компания специализируется на производстве и реализации деревянных поддонов. Все поддоны производятся с точным соблюдением требований ГОСТа(124356) в специально оборудованных цехах из обрезного материала хвойных и лиственных пород. Пиломатериал для поддонов мы производим на собственной пилораме, что позволяет нам не зависеть от поставщиков данного направления.
+      </p>
     </div>
     </section>
     <!--Описание продукции-->
@@ -88,10 +89,32 @@
         <!--ТХ поддонов-->
         <div class="th-poddon">
           <div class="th-content">
-            <div class="th-name">Вес</div>
+            <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
+            <div class="th-znach">1200 мм</div>
           </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
           <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
@@ -120,10 +143,32 @@
         <!--ТХ поддонов-->
         <div class="th-poddon">
           <div class="th-content">
-            <div class="th-name">Вес</div>
+            <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
+            <div class="th-znach">1200 мм</div>
           </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
           <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
@@ -152,10 +197,32 @@
         <!--ТХ поддонов-->
         <div class="th-poddon">
           <div class="th-content">
-            <div class="th-name">Вес</div>
+            <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
+            <div class="th-znach">1200 мм</div>
           </div>
+          <div class="th-content">
+            <div class="th-name">Ширина</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">800 мм</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Сорт</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach">1-2-3</div>
+          </div>
+          <div class="th-content">
+            <div class="th-name">Цена</div>
+            <div class="th-dotted">&nbsp;</div>
+            <div class="th-znach"><b>от 400р</b></div>
+          </div>
+        </div>
+      </div>
+      <div class="prod-container">
+        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
+        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
+        <!--ТХ поддонов-->
+        <div class="th-poddon">
           <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
@@ -184,11 +251,6 @@
         <!--ТХ поддонов-->
         <div class="th-poddon">
           <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
-          <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
             <div class="th-znach">1200 мм</div>
@@ -216,11 +278,6 @@
         <!--ТХ поддонов-->
         <div class="th-poddon">
           <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
-          <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
             <div class="th-znach">1200 мм</div>
@@ -247,107 +304,6 @@
         <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
         <!--ТХ поддонов-->
         <div class="th-poddon">
-          <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Длина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1200 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Ширина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">800 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Сорт</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1-2-3</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Цена</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach"><b>от 400р</b></div>
-          </div>
-        </div>
-      </div>
-      <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
-        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
-        <!--ТХ поддонов-->
-        <div class="th-poddon">
-          <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Длина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1200 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Ширина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">800 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Сорт</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1-2-3</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Цена</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach"><b>от 400р</b></div>
-          </div>
-        </div>
-      </div>
-      <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
-        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
-        <!--ТХ поддонов-->
-        <div class="th-poddon">
-          <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Длина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1200 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Ширина</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">800 мм</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Сорт</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">1-2-3</div>
-          </div>
-          <div class="th-content">
-            <div class="th-name">Цена</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach"><b>от 400р</b></div>
-          </div>
-        </div>
-      </div>
-      <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм<br>ГОСТ-0000000000</h5>
-        <img src="https://media.makler.md/production/an/preview1/000/051/746/000051746858.jpg" alt="Паллеты 1200х800" class="poddon_img">
-        <!--ТХ поддонов-->
-        <div class="th-poddon">
-          <div class="th-content">
-            <div class="th-name">Вес</div>
-            <div class="th-dotted">&nbsp;</div>
-            <div class="th-znach">25 кг</div>
-          </div>
           <div class="th-content">
             <div class="th-name">Длина</div>
             <div class="th-dotted">&nbsp;</div>
@@ -371,6 +327,20 @@
         </div>
       </div>
     </div>
+    <!--Приемущества-->
+    <section class="section" id="advantages">
+      <div class="section-about">
+        <h2>Почему именно мы?</h2>
+        <ul class="adv-menu">
+          <li class="adv"><i class="material-icons">calendar_month</i><a>Собственное производство с 1999 года</a></li>
+          <li class="adv"><i class="material-icons">forest</i><a>Независимость от поставщиков пиломатериала</a></li>
+          <li class="adv"><i class="material-icons">timer</i><a>Точное соблюдение сроков производства</a></li>
+          <li class="adv"><i class="material-icons">sell</i><a>Доступная цена</a></li>
+          <li class="adv"><i class="material-icons">forklift</i><a>Быстрая погрузка</a></li>
+          <li class="adv"><i class="material-icons">eco</i><a>Экологически чистое производство</a>
+        </ul>
+      </div>
+      </section>
     <!--Контакты-->
     <section class="section" id="contacts">
       <div class="section-contacts">
